# governed-agentic-analytics

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: README.md  __init__.py
docs/: README.md
eval/: README.md  __init__.py
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
ingestion/: README.md  __init__.py  config.py  run.py  state.py  storage.py
ingestion/connectors/: __init__.py  aemo.py  base.py
orchestration/: README.md  __init__.py  definitions.py
semantic/: README.md
tests/: test_ingestion.py  test_orchestration.py  test_smoke.py
transform/: README.md  dbt_project.yml  profiles.example.yml
transform/macros/: generate_schema_name.sql
transform/models/marts/: _marts__models.yml  dim_nem_region.sql  fct_nem_interval_prices.sql
transform/models/staging/: _aemo__sources.yml  _stg_aemo__models.yml  stg_aemo__nem_summary.sql
transform/seeds/: nem_regions.csv
web/: README.md  package.json
