[project]
name = "governed-agentic-analytics"
version = "0.1.0"
description = "Connector-based ELT into BigQuery with a governed, evaluated GenAI analytics layer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "lxml>=5.2",
    "google-cloud-storage>=2.17",
    "google-cloud-bigquery>=3.25",
]

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.3", "pre-commit>=3.8"]
agent = ["fastapi>=0.114", "uvicorn[standard]>=0.30", "openai>=1.45", "sqlglot>=25.0", "langfuse>=2.50"]
orchestration = ["dagster>=1.8", "dagster-webserver>=1.8", "dagster-gcp>=0.24"]
transform = ["dbt-bigquery>=1.8"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["ingestion", "agent", "orchestration", "eval", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
